kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 25%
     maxSurge: 25%
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: web
        image: ama4ri/webapp:1.6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 8085
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8085
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
